--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ certifi==2021.10.8
 charset-normalizer==2.0.9
 docker==5.0.3
 idna==3.3
+psutil==5.8.0
 python-dotenv==0.19.2
 requests==2.26.0
 urllib3==1.26.7
