--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,29 @@
 certifi==2021.10.8
 charset-normalizer==2.0.9
+cycler==0.11.0
 docker==5.0.3
+fonttools==4.28.5
 idna==3.3
+joblib==1.1.0
+kiwisolver==1.3.2
+matplotlib==3.5.1
+numpy==1.21.5
+packaging==21.3
+pandas==1.3.5
+Pillow==8.4.0
 psutil==5.8.0
+pyparsing==3.0.6
+PyQt5==5.15.6
+PyQt5-Qt5==5.15.2
+PyQt5-sip==12.9.0
+python-dateutil==2.8.2
 python-dotenv==0.19.2
+pytz==2021.3
 requests==2.26.0
+scikit-learn==1.0.1
+scipy==1.7.3
+six==1.16.0
+sklearn==0.0
+threadpoolctl==3.0.0
 urllib3==1.26.7
 websocket-client==1.2.3
