--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ certifi==2021.10.8
 charset-normalizer==2.0.9
 cycler==0.11.0
 docker==5.0.3
+expandvars==0.7.0
 fonttools==4.28.5
 idna==3.3
 joblib==1.1.0
@@ -12,6 +13,7 @@ packaging==21.3
 pandas==1.3.5
 Pillow==8.4.0
 psutil==5.8.0
+pymongo==4.0.1
 pyparsing==3.0.6
 PyQt5==5.15.6
 PyQt5-Qt5==5.15.2
